@@ -1,0 +1,7 @@
+/* dlist.c */
+extern int dlist_insert(int, int);
+extern int dlist_remove(int);
+extern void dlist_free(int);
+extern int dlist_next(int);
+extern int dlist_value(int);
+extern void dlist_init(int);
